fix: better align map legend
I am not a 100% sure whether this is the actual thing
that was meant by the bug report that the map legend
and background were not properly aligned, but it was wrong
like this anyway so I fixed it.

--- a/components/MapChart/MapChartHeader/MapChartHeader.module.scss
+++ b/components/MapChart/MapChartHeader/MapChartHeader.module.scss
@@ -20,6 +20,7 @@
     flex-direction: column;
 
     bottom: 0;
+    left: 0;
     padding: $size-m;
 
     span {
